--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   opacity: 0;
   pointer-events: none;
   display: flex;
+  max-width: fit-content !important;
   flex-direction: row !important;
   gap: 12px;
   padding: 10px 16px;
@@ -21,8 +22,8 @@
 }
 
 #floating-nav button {
-  width: 38px;
-  height: 38px;
+  width: 38px !important;
+  height: 38px !important;
   border-radius: 12px;
   border: none;
   cursor: pointer;
