--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   padding: 10px 16px;
   border-radius: 16px;
   z-index: 999999;
-  transition: all .35s cubic-bezier(.22,1,.36,1);
+  transition: all .35s cubic-bezier(.22, 1, .36, 1);
 }
 
 #floating-nav.show {
@@ -51,22 +51,12 @@
   transform: scale(.92);
 }
 
-#floating-nav .tooltip::after {
-  content: "";
-  position: absolute;
-  bottom: -6px;
-  left: 50%;
-  transform: translateX(-50%);
-  border-width: 6px 6px 0 6px;
-  border-style: solid;
-  border-color: currentColor transparent transparent transparent;
-  opacity: 0.6;
-}
+
 
 /* Tooltips */
 .tooltip {
   position: absolute;
-  top: 90%;
+  top: 100%;
   left: 50%;
   transform: translateX(-50%) translateY(6px);
   opacity: 0;
@@ -91,7 +81,7 @@ button:hover .tooltip {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --accent:#d8d8d8;
+    --accent: #d8d8d8;
   }
 }
 
@@ -110,6 +100,7 @@ button:hover .tooltip {
   border-radius: 4px;
   cursor: grab;
 }
+
 ::-webkit-scrollbar-thumb:active {
   cursor: grabbing;
 }
